--- a/static/index.html
+++ b/static/index.html
@@ -4,25 +4,14 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
         <title>Tomcat</title>
-        <style>
-            #list-of-demos { display: none; }
-        </style>
     </head>
     <body>
-        <div id="list-of-demos">
-            <h1>List of demos</h1>
-            <ul>
-                <li><a href="./#1-initial.js">#1: Initial implementation</a></li>
-                <li><a href="./#2-relayout.js">#2: Getting rid of relayouts</a></li>
-                <li><a href="./#3-transforms.js">#3: Using transforms instead of box model</a></li>
-                <li><a href="./#4-vsync.js">#4: Optimising rendering by v-syncing</a></li>
-            </ul>
-        </div>
-        <script>
-            function getQueryParameter(str) {
-                // ...
-            }
-            
-        </script>
+        <h1>List of demos</h1>
+        <ul>
+            <li><a href="01">#1: Initial implementation</a></li>
+            <li><a href="02">#2: Getting rid of relayouts</a></li>
+            <li><a href="03">#3: Using transforms instead of box model</a></li>
+            <li><a href="04">#4: Optimising rendering by v-syncing</a></li>
+        </ul>
     </body>
 </html>
