--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,8 @@
             <li><a href="02">#2: Getting rid of relayouts</a></li>
             <li><a href="03">#3: Using transforms instead of box model</a></li>
             <li><a href="04">#4: Optimising rendering by v-syncing</a></li>
+            <li><a href="05">#5: Avoiding expensive garbage collection</a></li>
+            <li><a href="06">#6: Implementing a &lt;canvas&gt; renderer</a></li>
         </ul>
     </body>
 </html>
