--- a/static/01/index.html
+++ b/static/01/index.html
@@ -12,6 +12,7 @@
     <body>
         <div id="viewport"></div>
         <script src="lib/jquery.js"></script>
+        <script src="lib/game_objects.js"></script>
         <script src="lib/game.js"></script>
     </body>
 </html>
