--- a/static/01/index.html
+++ b/static/01/index.html
@@ -6,12 +6,14 @@
         <title>01</title>
         <style>
             html { background: black; }
-            #viewport { position: fixed; top: 0; left: 0; width: 100%; height: 100%; }
+            #viewport { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: url(/assets/sky.jpg); background-size: 100% 100%; }
+            .game-object { position: absolute; }
         </style>
     </head>
     <body>
         <div id="viewport"></div>
         <script src="lib/jquery.js"></script>
+        <script src="lib/geometry.js"></script>
         <script src="lib/game_objects.js"></script>
         <script src="lib/game.js"></script>
     </body>
