Added Leap controller

--- a/static/01/index.html
+++ b/static/01/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <div id="viewport"></div>
+        <script src="lib/leapmotion.js"></script>
         <script src="lib/jquery.js"></script>
         <script src="lib/geometry.js"></script>
         <script src="lib/game_objects.js"></script>
