Starting point for controllers

--- a/static/01/index.html
+++ b/static/01/index.html
@@ -14,8 +14,10 @@
         <div id="viewport"></div>
         <script src="lib/leapmotion.js"></script>
         <script src="lib/jquery.js"></script>
+        <script src="lib/event_emitter.js"></script>
         <script src="lib/geometry.js"></script>
         <script src="lib/game_objects.js"></script>
+        <script src="lib/game_controllers.js"></script>
         <script src="lib/game.js"></script>
     </body>
 </html>
